--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
